--- a/env.template
+++ b/env.template
@@ -11,6 +11,7 @@ DB_PASSWORD=password
 NODE_ENV=development
 PORT=3000
 SESSION_SECRET=your-super-secret-session-key-change-this-in-production
+JWT_SECRET=change-me-in-dev
 
 # Stripe Configuration (for online payments)
 STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key
@@ -28,3 +29,6 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_FROM_NUMBER=
 TWILIO_MESSAGING_SERVICE_SID=
+
+# Observability
+SENTRY_DSN=
