--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
+    "@sentry/node": "^10.5.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -28,6 +29,8 @@
     "moment": "^2.29.4",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "pino": "^9.9.0",
+    "pino-http": "^10.5.0",
     "sequelize": "^6.35.0",
     "stripe": "^14.7.0",
     "twilio": "^4.23.0"
